added links to make webpage clickable

--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -6,7 +6,7 @@
 
  
   <ul>
-
+<!--here we pass in the info that comes from has many between the || is the item we want displayed-->
    <% @actor.movies.each do |movies| %>
 
    <li><%= movies.name %></li>
