--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :actor_id %><br>
-    <%= f.number_field :actor_id %>
+    <%= f.collection_select :actor_id, Actor.all, :id, :name %>
   </div>
   <div class="actions">
     <%= f.submit %>
